# cryptid

./: .eslintrc.yaml  .gitignore  Anchor.toml  CFE6uDuLK7Hd9HVQqWkXU3nTmdZUm5KCEtFcEfbSTZLy  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  package.json  tsconfig.json
.github/workflows/: build.yml  cli.yml  client.yml  codeql-analysis.yml  cryptid.yml  deploy.yml  e2e-tests.yml  e2e.yml  frontend-cypress-tests.yml  frontend-cypress.yml  programs-cryptid-signer-dev.yml  programs-cryptid-signer.yml  wallet-deploy.yml
.husky/: pre-commit
cli/: .eslintrc  .gitignore  .mocharc.json  README.md  oclif.manifest.json  package.json  tsconfig.json
cli/script/: mint.ts
cli/src/commands/: airdrop.ts  alias.ts  balance.ts  base.ts  config.ts  control.ts  document.ts  hello.ts  init.ts  key.ts  token.ts  transfer.ts
cli/src/lib/: flags.ts  solana.ts
cli/test/: setup.ts
cli/test/commands/: address.test.ts  alias.test.ts  config.test.ts  control.test.ts  document.test.ts  init.test.ts  key.test.ts  token.test.ts  transfer.test.ts
cli/test/fixtures/: config.yml  id.json
client/: .eslintrc.yaml  .mocharc.json  README.md  package.json  tsconfig.json
client/src/: index.ts  types.ts
client/test/: tsconfig.json
cryptid_anchor/: .yarnrc.yml  Anchor.toml  package.json  tsconfig.base.module.json  tsconfig.json
cryptid_anchor/etc/: publish-all.sh
cryptid_anchor/programs/cryptid_anchor/: Cargo.toml
cryptid_anchor/programs/cryptid_anchor/src/: error.rs  lib.rs  util.rs
cryptid_anchor/programs/cryptid_anchor/src/instructions/: approve_execution.rs  create.rs  direct_execute.rs  execute_transaction.rs  mod.rs  propose_transaction.rs  util.rs
cryptid_anchor/programs/cryptid_anchor/src/state/: abbreviated_account_meta.rs  abbreviated_instruction_data.rs  account_meta_props.rs  cryptid_account.rs  instruction_data.rs  instruction_size.rs  mod.rs  signing_key.rs  signing_key_data.rs  transaction_account.rs  transaction_account_meta.rs  transaction_state.rs
cryptid_anchor/programs/cryptid_anchor/src/util/: cpi.rs  mod.rs  pda_seeds.rs  seeder.rs
cryptid_anchor/programs/middleware/check_pass/: Cargo.toml
cryptid_anchor/programs/middleware/check_pass/src/: lib.rs
cryptid_anchor/tests/: cryptid_anchor.ts  directExecute.ts  package.json  proposeExecute.ts
e2e/: package.json
e2e-tests/: cypress.json  package.json
e2e-tests/cypress/: types.d.ts
e2e/cypress/: tsconfig.json  webpack.config.js
etc/: publish-all.sh
frontend-tests/: cypress.json  package.json
frontend-tests/cypress/: types.d.ts
migrations/: deploy.ts
programs/: package.json
programs/cryptid/: Cargo.toml
programs/cryptid/src/: error.rs  lib.rs
programs/cryptid/src/instructions/: approve_execution.rs  close_transaction.rs  create.rs  create_cryptid_account.rs  direct_execute.rs  execute_transaction.rs  extend_transaction.rs  mod.rs  propose_transaction.rs  seal_transaction.rs  superuser_approve_execution.rs  util.rs
programs/cryptid/src/state/: abbreviated_account_meta.rs  abbreviated_instruction_data.rs  account_meta_props.rs  cryptid_account.rs  did_reference.rs  instruction_size.rs  mod.rs  transaction_account.rs  transaction_state.rs
programs/cryptid/src/util/: cpi.rs  mod.rs
programs/cryptid_signer/: Cargo.toml  README.md
programs/cryptid_signer/src/: account.rs  entry.rs  error.rs  instruction.rs  lib.rs  macros.rs  processor.rs  seeds.rs  state.rs
programs/cryptid_signer/src/client/: cryptid.rs  did.rs  mod.rs  util.rs
programs/cryptid_signer/src/instruction/: 000_create_cryptid.rs  000_create_doa.rs  001_propose_transaction.rs  002_expand_transaction.rs  003_execute_transaction.rs  004_cancel_transaction.rs  005_direct_execute.rs  005_direct_execute_transaction.rs  254_test_instruction.rs  mod.rs
programs/cryptid_signer/tests/: 000_create_doa.rs  001_propose_transaction.rs  002_expand_transaction.rs  003_execute_transaction.rs  004_cancel_transaction.rs  005_direct_execute.rs  254_sanity_check.rs  constants.rs  create_doa.rs  direct_execute_flow.rs  sanity_check.rs
programs/cryptid_signer/tests/util/: mod.rs
programs/dummy_program/: Cargo.toml
programs/dummy_program/src/: lib.rs
programs/dummy_program/tests/: 000_require_signer.rs  001_return_val.rs  constants.rs  require_signer.rs  util.rs
programs/middleware/check_did/: Cargo.toml
programs/middleware/check_did/src/: lib.rs
programs/middleware/check_pass/: Cargo.toml
programs/middleware/check_pass/src/: lib.rs
programs/middleware/check_recipient/: Cargo.toml
programs/middleware/check_recipient/src/: lib.rs
programs/middleware/time_delay/: Cargo.toml
programs/middleware/time_delay/src/: lib.rs
programs/test_utils/: Cargo.toml
programs/test_utils/src/: lib.rs
solana_generator/: Cargo.toml
solana_generator/derive/: Cargo.toml
solana_generator/derive/src/: account.rs  account_argument.rs  error.rs  instruction_list.rs  lib.rs
solana_generator/examples/: account_argument_derive.rs  account_derive.rs  program.rs
solana_generator/src/: account_info.rs  discriminant.rs  entrypoint.rs  error.rs  lib.rs  macros.rs  pda_seeds.rs  program.rs  util.rs
solana_generator/src/account_types/: init_account.rs  init_or_zeroed_account.rs  mod.rs  program_account.rs  rest.rs  system_program.rs  zeroed_account.rs
solana_generator/src/impls/: array.rs  mod.rs  vec.rs  vec_deque.rs
solana_generator/src/traits/: account.rs  account_argument.rs  error.rs  indexer.rs  instruction.rs  instruction_list.rs  mod.rs
src/pages/: WalletPage.js
wallet/: README.md  craco.config.js  package.json  tailwind.config.js
wallet-legacy/: .env.development  README.md  tsconfig.json
wallet-legacy/src/: index.css
wallet-standard/cryptid-wallet/: package.json
wallet-standard/dapp/: package.json
wallet/cryptid-wallet-standard-library/: package.json
wallet/cryptid-wallet-ui/: .babelrc  .env  docker-compose.yml  next.config.js  package.json  tailwind.config.js  tsconfig.json
wallet/public/: CNAME  index.html  manifest.json
wallet/src/: App.js  App.tsx  App2.tsx  index.css  index.js  wdyr.ts
(+355 files in other folders)
