[package]
name = "solana_generator"
version = "0.1.0"
edition = "2018"

[features]
default = []
no_entrypoint = []
derive_debug_account = ["solana_generator_derive/debug_account"]
derive_debug_error = ["solana_generator_derive/debug_error"]
derive_debug_account_argument = ["solana_generator_derive/debug_account_argument"]
derive_debug_instruction_list = ["solana_generator_derive/debug_instruction_list"]

[dependencies]
solana_generator_derive = { path = "./derive" }
borsh = { version = "0.9.1" }
solana-program = "1.7.12"
zeroize = "=1.3.0"
num-traits = "0.2.14"
array-init = "2.0.0"
bincode = "1.3.3"
strum = { version = "0.21.0", features = ["derive"] }

[[example]]
name = "account_argument_derive"
crate-type = ["cdylib", "lib"]

[[example]]
name = "account_derive"
crate-type = ["cdylib", "lib"]
