[package]
name = "cryptid_signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cruiser = { version = "0.1.1", path = "../../../cruiser" }
borsh = "0.9.1"
bitflags = "1.3.2"
sol-did = { git = "https://github.com/identity-com/sol-did", rev = "b227cec59795ae6bf23ef987f7ce3a6ea6b6108c", features = ["no-entrypoint"] }
num-traits = "0.2.14"
solana-client = { version = "1.9.13", optional = true }
solana-sdk = { version = "1.9.13", optional = true }
futures = { version = "0.3.21", optional = true }
tokio = { version = "1.11.0", optional = true }

[dev-dependencies]
solana-program-test = "1.9.13"
log = "0.4.14"
dummy_program = { path = "../dummy_program", features = ["no-entrypoint"] }
num-derive = "0.3.3"
strum = { version = "0.22.0", features = ["derive"] }
serde_json = "1.0.79"
# Old to match solana-sdk
rand = "0.7.3"
rand_chacha = "0.2.2"

[features]
default = []
no-entrypoint = []
test-bpf = []
client = ["solana-client", "solana-sdk", "futures", "tokio"]
processor = []
