[package]
name = "dummy_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana_generator = { git = "https://github.com/identity-com/solana_generator", rev = "759e8c72a97e96c1fb7b2c42e625d1a3f69a105f" }
borsh = "0.9.1"

[dev-dependencies]
solana-sdk = "1.10.34"
solana-program-test = "1.10.34"
tokio = "1.14.1"
log = "0.4.14"
test_utils = { path = "../test_utils" }

[features]
default = []
no-entrypoint = []
test-bpf = []
