[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-sdk = "1.10.34"
solana-program-test = "1.10.34"
log = "0.4.14"
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"
array-init = "2.0.0"
async-trait = "0.1.51"
tarpc = "0.27.2"

[features]
default = []
test-bpf = []
