[package]
name = "solana_generator_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[features]
default = []
debug_account = []
debug_error = []
debug_account_argument = []
debug_instruction_list = []
debug = ["debug_account", "debug_error", "debug_account_argument", "debug_instruction_list"]

[dependencies]
proc-macro2 = "1.0.27"
syn = "1.0.73"
quote = "1.0.9"
sha2 = "0.9.5"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.0.0"

[dev-dependencies]
solana_generator = { path = ".." }
