[package]
name = "cryptid_anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptid_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
bitflags = "1.3.2"
sol-did = { git = "https://github.com/identity-com/sol-did", tag = "3.1.0", features = ["no-entrypoint"] }
num-traits = "0.2.15"
