[package]
name = "check_pass"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "check_pass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
cryptid_anchor = { path = "../../cryptid_anchor", features = ["no-entrypoint", "cpi"] }
num-traits = "0.2.15"
sol-did = { git = "https://github.com/identity-com/sol-did", rev = "fa0729fdb3673e67dbbb7b1cf66b05303daf05f9", features = ["no-entrypoint"] }
solana-gateway = "0.2.0"
